# lensprofile-ofx

./: CMakeLists.txt  Info.plist  README.md  install.sh  uninstall.sh
.github/workflows/: build.yml
installer/: Distribution.xml  build_installer.sh
installer/resources/: readme.txt  welcome.txt
installer/scripts/: postinstall
metal/: MetalKernel.mm
profiles/: canon_k35_50mm.json
src/: BundleResourcePath.cpp  BundleResourcePath.h  ChromaticAberrationPlugin.cpp  ChromaticAberrationPlugin.h  ChromaticAberrationProcessor.cpp  ChromaticAberrationProcessor.h  LensProfile.h  MetalKernel.h  ProfileLoader.cpp  ProfileLoader.h
tests/: test_profile_loader.cpp
